Version 2.0.8 V2-STABLE (rgerhards), 2008-??-??
- bugfix: ompgsql did not detect problems in sql command execution
  this could cause loss of messages. The handling was correct if the
  connection broke, but not if there was a problem with statement
  execution. The most probable case for such a case would be invalid
  sql inside the template, and this is now much easier to diagnose.
---------------------------------------------------------------------------
Version 2.0.7 V2-STABLE (rgerhards), 2008-04-14
- bugfix: the default for $DirCreateMode was 0644, and as such wrong.
  It has now been changed to 0700. For some background, please see
  http://lists.adiscon.net/pipermail/rsyslog/2009-April/001986.html
- bugfix: "$CreateDirs off" also disabled file creation
  Thanks to William Tisater for analyzing this bug and providing a patch.
  The actual code change is heavily based on William's patch.
- bugfix: memory leak in ompgsql
  Thanks to Ken for providing the patch
- bugfix: potential memory leak in msg.c
  This one did not surface yet and the issue was actually found due to
  a problem in v4 - but better fix it here, too
---------------------------------------------------------------------------
Version 2.0.6 V2-STABLE (rgerhards), 2008-08-07
- bugfix: memory leaks in rsyslogd, primarily in singlethread mode
  Thanks to Frederico Nunez for providing the fix
- bugfix: copy&paste error lead to dangling if - this caused a very minor
  issue with re-formatting a RFC3164 date when the message was invalidly
  formatted and had a colon immediately after the date. This was in the
  code for some years (even v1 had it) and I think it never had any
  effect at all in practice. Though, it should be fixed - but definitely
  nothing to worry about.
---------------------------------------------------------------------------
Version 2.0.6 V2-STABLE (rgerhards), 2008-08-07
- bugfix: IPv6 addresses could not be specified in forwarding actions