@@ -5,6 +5,7 @@ Version 2.0.8 V2-STABLE (rgerhards), 2008-??-??
   connection broke, but not if there was a problem with statement
   execution. The most probable case for such a case would be invalid
   sql inside the template, and this is now much easier to diagnose.
+- doc bugfix: default for $DirCreateMode incorrectly stated
 ---------------------------------------------------------------------------
 Version 2.0.7 V2-STABLE (rgerhards), 2008-04-14
 - bugfix: the default for $DirCreateMode was 0644, and as such wrong.
